Succesfully able to create the jwt stateless token for active user
